tests/ui/zod/fail/tuple_structs_default_before_non_default_field.stderr
error: [zod]: non-default field follows default field
 --> tests/ui/zod/fail/tuple_structs_default_before_non_default_field.rs:6:39
  |
6 | struct Test(#[serde(default)] String, String);
  |                                       ^^^^^^
